fix chat panel overflow

--- a/src/code-editor/chat-panel.css
+++ b/src/code-editor/chat-panel.css
@@ -1,5 +1,6 @@
 .cm-chat-panel {
   display: grid;
+  color-scheme: dark;
 
   #chat-textarea {
     border: none;
@@ -10,10 +11,15 @@
     border: none;
     outline: none;
     background-color: transparent;
+    max-height: min(calc(100vh - 40px), 400px);
 
     &:focus {
       color: white;
       background-color: black;
+    }
+
+    &[data-speaking] {
+      color: GrayText;
     }
   }
 }
